#cargo-features = ["strip"]

[package]
name = "crazy"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"

[profile.release]
#strip = true  # Automatically strip symbols from the binary.
#opt-level = "z"  # Optimize for size.
opt-level = 3
lto = "thin"
#codegen-units=1
panic = "abort"

