[package]
name = "dlhell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = ">=0.7.2"
mylib = { path = "mylib" }

[profile.release]
#TARGET CPU IS IMPORTANT FOR OPTIMIZATION, DON'T FORGET, FIND A GOOD WAY TO ENABLE
#strip = true
#opt-level = "z"  # Optimize for size.
#opt-level = 3
#lto = "thin"
#codegen-units=1
#panic = "abort"

