[package]
name = "tokio_tunnel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.16.1", features = ["rt-multi-thread", "io-util", "net", "time", "macros"]}
zeroize = "1.4"
rand = { version = "0.8", features = ["getrandom", "std"]}
#The stable 1.2 branch has some old dependency versions that are annoying to deal with
#For example OsRng isn't compatible due to rand_core being too old
x25519-dalek = { version = "2.0.0-pre.1", features = ["reusable_secrets", "serde"]}
blake2 = { version = "0.9", features = ["std"]}
digest = { version = "0.9", features = ["std"]}
sha2 = { version = "0.9", features = ["std"]}
generic-array = "0.14"
typenum = "1.14"
aead = { version = "0.4", features = ["alloc"]}
aes-gcm = { version = "0.9", features = ["alloc"]}
aes-gcm-siv = { version = "0.10", features = ["alloc"]}
chacha20poly1305 = { version = "0.9", features = ["alloc"]}
hkdf = "0.11"
serde = { version = "1.0", features = ["std", "alloc", "derive"]}
serde_json = "1.0"
async-recursion = "1.0"

[profile.release]
opt-level = 3
lto = "thin"
#panic = "abort"

