[package]
name = "tokio_tunnel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.16.1", features = ["rt-multi-thread", "io-util", "net", "time", "macros", "sync"]}
tokio-util = { version = "0.7", features = ["codec", "io-util"]}
bytes = "1.1"
futures = "0.3.21"
futures-util = { version = "0.3.21", features = ["io", "sink"]}
zeroize = "1.4"
rand = { version = "0.8", features = ["getrandom", "std"]}
#The stable 1.2 branch has some old dependency versions that are annoying to deal with
#For example OsRng isn't compatible due to rand_core being too old
x25519-dalek = { version = "2.0.0-pre.1", features = ["reusable_secrets", "serde"]}
blake2 = { version = "0.9", features = ["std"]}
digest = { version = "0.9", features = ["std"]}
generic-array = "0.14"
typenum = "1.14"
aead = { version = "0.4", features = ["alloc"]}
chacha20poly1305 = { version = "0.9", features = ["alloc"]}
serde = { version = "1.0", features = ["std", "alloc", "derive"]}
serde_json = "1.0"
rustls = { version = "0.20.4", features = ["dangerous_configuration"]}
rustls-pemfile = "0.3"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
panic = "abort"

