[package]
name = "tunnel"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#libc = "0.2"
tokio = { version = "1", features = ["full"] }
rustls = "0.20"
zeroize = "1.4"
aead = "0.4"
signature = "1.3"

[profile.release]
opt-level = 3
lto = "thin"
#panic = "abort"

